workspace/log/build_2023-10-16_18-02-46/template_drone_control/stderr.log
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp: In member function ‘void TemplateDroneControl::send_takeoff_land_request(float, bool)’:
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp:161:61: error: ‘client’ in namespace ‘rclcpp’ does not name a type; did you mean ‘Client’?
  161 |         std::shared_future<std::shared_ptr<typename rclcpp::client::ClientT<mavros_msgs::srv::CommandTOL>::SharedResponse>> future;
      |                                                             ^~~~~~
      |                                                             Client
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp:161:67: error: expected template-argument before ‘::’ token
  161 |         std::shared_future<std::shared_ptr<typename rclcpp::client::ClientT<mavros_msgs::srv::CommandTOL>::SharedResponse>> future;
      |                                                                   ^~
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp:161:67: error: expected ‘>’ before ‘::’ token
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp:161:122: error: template argument 1 is invalid
  161 |         std::shared_future<std::shared_ptr<typename rclcpp::client::ClientT<mavros_msgs::srv::CommandTOL>::SharedResponse>> future;
      |                                                                                                                          ^~
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp:161:125: error: template argument 1 is invalid
  161 |         std::shared_future<std::shared_ptr<typename rclcpp::client::ClientT<mavros_msgs::srv::CommandTOL>::SharedResponse>> future;
      |                                                                                                                             ^~~~~~
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp:165:13: error: ‘future’ was not declared in this scope; did you mean ‘std::future’?
  165 |             future = takeoff_client_->async_send_request(request);
      |             ^~~~~~
      |             std::future
In file included from /opt/ros/foxy/include/rclcpp/executors.hpp:18,
                 from /opt/ros/foxy/include/rclcpp/rclcpp.hpp:146,
                 from /home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp:1:
/usr/include/c++/9/future:125:11: note: ‘std::future’ declared here
  125 |     class future;
      |           ^~~~~~
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp:168:13: error: ‘future’ was not declared in this scope; did you mean ‘std::future’?
  168 |             future = land_client_->async_send_request(request);
      |             ^~~~~~
      |             std::future
In file included from /opt/ros/foxy/include/rclcpp/executors.hpp:18,
                 from /opt/ros/foxy/include/rclcpp/rclcpp.hpp:146,
                 from /home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp:1:
/usr/include/c++/9/future:125:11: note: ‘std::future’ declared here
  125 |     class future;
      |           ^~~~~~
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp:172:81: error: ‘future’ was not declared in this scope; did you mean ‘std::future’?
  172 |         if (rclcpp::spin_until_future_complete(this->get_node_base_interface(), future) == rclcpp::executor::FutureReturnCode::SUCCESS) {
      |                                                                                 ^~~~~~
      |                                                                                 std::future
In file included from /opt/ros/foxy/include/rclcpp/executors.hpp:18,
                 from /opt/ros/foxy/include/rclcpp/rclcpp.hpp:146,
                 from /home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp:1:
/usr/include/c++/9/future:125:11: note: ‘std::future’ declared here
  125 |     class future;
      |           ^~~~~~
make[2]: *** [CMakeFiles/template_drone_control_node.dir/build.make:63: CMakeFiles/template_drone_control_node.dir/src/template_drone_control_node.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:105: CMakeFiles/template_drone_control_node.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
